syntax = "proto3";

//import "dev/bayan_ibrahim/my_dictionary/words_list_preferences.proto";

option java_package = "dev.bayan_ibrahim.my_dictionary.data_source.local.proto.model";
option java_multiple_files = true;

message WordsListTrainPreferencesProto {

  //  bool is_dynamic_theming_on = 1;
  int32 train_type = 1;
  int32 train_target = 2;
  int32 limit = 3;
  int32 sort_by = 4;
  int32 sort_by_order = 5;
}